Fixed all spacing issues
Finally figured out all this CSS jazz, and what was adding all of the
extra spacing.

Whew. Time for a beer.

--- a/iamagiantnerd.css
+++ b/iamagiantnerd.css
@@ -48,7 +48,7 @@ hr {
 .flex-list {
 	font-family: 'VT323', monospace; 
     position: relative;
-    margin: 1em;
+    margin: 0;
     overflow: hidden;
 }
 
@@ -63,8 +63,19 @@ hr {
 .flex-list li {
     flex-grow: 1;
     flex-basis: auto;
-    margin: .25em 0;
+    margin: .05em 0;
     padding: 0 1em;
     text-align: center;
     border-left: 1px solid #ccc;    
+}
+
+@media (max-width: 575.98px) { 
+.flex-list li {
+    flex-grow: 1;
+    flex-basis: auto;
+    margin: .3em 0;
+    padding: 0 1em;
+    text-align: center;
+    border-left: 1px solid #ccc;    
+}
 }
